hphp/hack/test/typecheck/enum_exh_default_with_extra.php.rust_elab.exp
File "enum_exh_default_with_extra.php", line 12, characters 6-6:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
